fix typo in minizip/CMakeLists.txt (thanks spliff!)

--- a/rts/lib/minizip/CMakeLists.txt
+++ b/rts/lib/minizip/CMakeLists.txt
@@ -7,8 +7,8 @@ If     (MINIZIP_FOUND)
 	# Use the system supplied MiniZip library
 	Message(STATUS "Using minizip library: ${MINIZIP_LIBRARY}")
 
-	SetGlobal(SPRING_MINIZIP_INCLUDE_DIR ${MINIZIP_INCLUDE_DIR}")
-	SetGlobal(SPRING_MINIZIP_LIBRARY ${MINIZIP_LIBRARY}")
+	SetGlobal(SPRING_MINIZIP_INCLUDE_DIR "${MINIZIP_INCLUDE_DIR}")
+	SetGlobal(SPRING_MINIZIP_LIBRARY "${MINIZIP_LIBRARY}")
 Else   (MINIZIP_FOUND)
 	# Build our own minizip library
 	SET(miniZipSources
