--- a/tools/ArchiveMover/CMakeLists.txt
+++ b/tools/ArchiveMover/CMakeLists.txt
@@ -1,4 +1,5 @@
 INCLUDE_DIRECTORIES(../../rts)
+INCLUDE_DIRECTORIES(${SPRING_MINIZIP_INCLUDE_DIR})
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
 
 FIND_PACKAGE(Boost 1.34.0 COMPONENTS filesystem REQUIRED)
@@ -26,7 +27,7 @@ ENDIF (MINGW)
 
 ADD_EXECUTABLE(ArchiveMover ${mySources})
 
-TARGET_LINK_LIBRARIES(ArchiveMover ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} 7zip minizip)
+TARGET_LINK_LIBRARIES(ArchiveMover ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} 7zip ${SPRING_MINIZIP_LIBRARY})
 
 
 INSTALL (TARGETS ArchiveMover RUNTIME DESTINATION ${BINDIR})
