--- a/rts/CMakeLists.txt
+++ b/rts/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(USE_GML_DEBUG FALSE CACHE BOOL "Use GML call debugging?")
 
 ### Assemble common incude dirs
 INCLUDE_DIRECTORIES(BEFORE lib/lua/include)
+INCLUDE_DIRECTORIES(${SPRING_MINIZIP_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/System/)
 
@@ -49,7 +50,7 @@ LIST(APPEND engineCommonLibraries ${DEVIL_IL_LIBRARY})
 ### Find include directories and add platform specific libraries
 LIST(APPEND engineCommonLibraries ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_SIGNALS_LIBRARY})
 
-LIST(APPEND engineCommonLibraries lua 7zip oscpack minizip streflop lobby)
+LIST(APPEND engineCommonLibraries lua 7zip oscpack ${SPRING_MINIZIP_LIBRARY} streflop lobby)
 
 IF    (UNIX)
 	# Needed for dynamically loading shared libraries (on some OS)
