--- a/tools/unitsync/CMakeLists.txt
+++ b/tools/unitsync/CMakeLists.txt
@@ -8,8 +8,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "../..")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 
 LIST(APPEND unitsync_libs ${DEVIL_IL_LIBRARY})
+LIST(APPEND unitsync_libs ${SPRING_MINIZIP_LIBRARY})
 LIST(APPEND unitsync_libs ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
-LIST(APPEND unitsync_libs 7zip minizip lua)
+LIST(APPEND unitsync_libs 7zip lua)
 LIST(APPEND unitsync_libs headlessStubs)
 
 IF    (MINGW)
@@ -34,6 +35,7 @@ ADD_DEFINITIONS(-DNO_SOUND)
 ADD_DEFINITIONS(-DBITMAP_NO_OPENGL)
 
 INCLUDE_DIRECTORIES(${DEVIL_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${SPRING_MINIZIP_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(../../rts/lib/lua/include)
 INCLUDE_DIRECTORIES(../../rts/lib/7zip)
 INCLUDE_DIRECTORIES(../../rts)
